Fix text align bug

--- a/css/style.css
+++ b/css/style.css
@@ -57,7 +57,7 @@ body {
   font-size: 60px;
   font-weight: 400;
   letter-spacing: 35px;
-  margin: 100px 0 20px 0;
+  margin: 100px -35px 20px 0;
 
   animation: moveInRight 1s ease-out;
 }
@@ -67,6 +67,7 @@ body {
   font-size: 20px;
   font-weight: 300;
   letter-spacing: 17.4px;
+  margin-right: -17.4px;
   animation: moveInLeft 1s ease-out;
 }
 
@@ -178,12 +179,14 @@ body {
     font-size: 50px;
     font-weight: 400;
     letter-spacing: 25px;
+    margin-right: -25px;
   }
 
   .heading-primary-sub {
     font-size: 20px;
     font-weight: 300;
     letter-spacing: 5px;
+    margin-right: -5px;
   }
 
   .btn:link,
@@ -209,11 +212,13 @@ body {
   .heading-primary-main {
     font-size: 30px;
     letter-spacing: 20px;
+    margin-right: -20px;
   }
 
   .heading-primary-sub {
     font-size: 12px;
     letter-spacing: 5px;
+    margin-right: -5px;
   }
 
   .btn:link,
